base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-test
  labels:
    backstage.io/kubernetes-id: go-test
