base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-test
  labels:
    app: go-test
    backstage.io/kubernetes-id: go-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-test
  template:
    metadata:
      labels:
        app: go-test
        backstage.io/kubernetes-id: go-test
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
        - name: go-test
          image: ghcr.io/botopsy/go-test:latest
          ports:
            - containerPort: 8080
          # env:
          #   - name: TEST
          #     value: test
          #   - name: ENV_FROM_SECRET
          #     valueFrom:
          #       secretKeyRef:
          #         key: test-secret
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 256m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 1
            periodSeconds: 10
